--- a/DSA-C#/DSA-CSharp.csproj
+++ b/DSA-C#/DSA-CSharp.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>DSA_C_</RootNamespace>
+    <RootNamespace>DSA_CSharp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
